@@ -1,5 +1,7 @@
 2001-08-07  Martin Baulig  <baulig@suse.de>
 
+	* button-widget.[ch]: Ported to GTK+ 2.0.
+
 	* basep-widget.[ch]: Ported to GTK+ 2.0.
 
 2001-08-07  Martin Baulig  <baulig@suse.de>
